# raminspect

./: Cargo.toml  README.md  cargo_readme.md  x86-64-alloc-blob.asm
examples/: firefox_search.rs  replacemem.rs
src/: lib.rs
